--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 
     .flip-tile-front, .flip-tile-back {
         position: absolute;
+        top: 0;
         width: 100%;
         height: 100%;
         -webkit-backface-visibility: hidden;
